--- a/templates/forum.html
+++ b/templates/forum.html
@@ -84,16 +84,16 @@
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
+                  <li><a href="{{ url_for('main') }}">Home</a></li>
                   <li><a href="{{ url_for('myBinder') }}">My Binder</a></li>
-                  <li><a href="{{ url_for('forum') }}">Forum</a></li>
+                  <li class="active"><a href="{{ url_for('forum') }}">Forum</a></li>
                   <li><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="signUp.html">Sign Up</a></li>
                   <li class="divider-vertical"></li>
                   <li class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In<strong class="caret"></strong></a>
+                    <a class="dropdown-toggle" href="{{ url_for('main') }}" data-toggle="dropdown">Sign In<strong class="caret"></strong></a>
                     <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
                       <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
                         <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" placeholder="Username"/>
@@ -101,7 +101,7 @@
                         <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
                         <label class="string optional" for="user_remember_me"> Remember me</label>
 
-                        <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+                        <a class="btn btn-primary" role="button">Sign In</a>
                       </form>
                       <!-- Login form here -->
                     </div>
