--- a/templates/forum_submitted.html
+++ b/templates/forum_submitted.html
@@ -82,9 +82,9 @@
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
+                  <li><a href="{{ url_for('main') }}">Home</a></li>
                   <li><a href="{{ url_for('myBinder') }}">My Binder</a></li>
-                  <li><a href="{{ url_for('forum') }}">Forum</a></li>
+                  <li class="active"><a href="{{ url_for('forum') }}">Forum</a></li>
                   <li><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -99,7 +99,7 @@
                         <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
                         <label class="string optional" for="user_remember_me"> Remember me</label>
 
-                        <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+                       <a class="btn btn-primary" role="button">Sign In</a>
                       </form>
                       <!-- Login form here -->
                     </div>
@@ -127,11 +127,13 @@
          </div>
          <div class="row">
           <br>
+          
+           <!-- Modal -->
           <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
             Reply
           </button>
 
-          <!-- Modal -->
+         
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
