--- a/templates/myBinder.html
+++ b/templates/myBinder.html
@@ -110,8 +110,8 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
-                <li><a href="{{ url_for('myBinder') }}">My Binder</a></li>
+                <li><a href="{{ url_for('main') }}">Home</a></li>
+                <li class="active"><a href="{{ url_for('myBinder') }}">My Binder</a></li>
                 <li><a href="{{ url_for('forum') }}">Forum</a></li>
                 <li><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
               </ul>
@@ -127,7 +127,7 @@
                       <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
                       <label class="string optional" for="user_remember_me"> Remember me</label>
 
-                      <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+                      <a class="btn btn-primary" role="button">Sign In</a>
                     </form>
                     <!-- Login form here -->
                   </div>
@@ -145,10 +145,11 @@
         <div class="col-lg-12">
           <h3>My Binder</h3>
           <form action="">
-            {% for test in pet%}
+
+            {% for test in gravity%}
             <div class="img">
-              <a target="_blank" href="klematis3_big.htm"><img src="{{ test.image_url }}" alt="Klematis" width="110" height="90"></a>
-              <div class="desc">{{ test.pet_name }}</div>
+              <a target="_blank" href="#"><img src="{{ test.image }}" alt="Klematis" width="110" height="90"></a>
+              <div class="desc"></div>
             </div>
             {% endfor %}
 
