--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -10,64 +10,83 @@
 
   <title>Solid Learning</title>
 
-   <!-- Bootstrap -->
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
-  <!-- Just for debugging purposes. Don't actually copy this line! -->
-  <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <style>
+  /**DROPDOWN HOVER**/
+  .sidebar-nav {
+    padding: 9px 0;
+  }
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
+  .dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
+  }
 
-      <style>
-      /**DROPDOWN HOVER**/
-      .sidebar-nav {
-        padding: 9px 0;
-      }
+  .dropdown-menu li:hover .sub-menu {
+    visibility: visible;
+  }
 
-      .dropdown-menu .sub-menu {
-        left: 100%;
-        position: absolute;
-        top: 0;
-        visibility: hidden;
-        margin-top: -1px;
-      }
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
 
-      .dropdown-menu li:hover .sub-menu {
-        visibility: visible;
-      }
+  .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+    margin-top: 0;
+  }
 
-      .dropdown:hover .dropdown-menu {
-        display: block;
-      }
-
-      .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
-        margin-top: 0;
-      }
-
-      .navbar .sub-menu:before {
-        border-bottom: 7px solid transparent;
-        border-left: none;
-        border-right: 7px solid rgba(0, 0, 0, 0.2);
-        border-top: 7px solid transparent;
-        left: -7px;
-        top: 10px;
-      }
-      .navbar .sub-menu:after {
-        border-top: 6px solid transparent;
-        border-left: none;
-        border-right: 6px solid #fff;
-        border-bottom: 6px solid transparent;
-        left: 10px;
-        top: 11px;
-        left: -6px;
-      }
-      </style>
-    </head>
+  .navbar .sub-menu:before {
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
+  }
+  .navbar .sub-menu:after {
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+    border-bottom: 6px solid transparent;
+    left: 10px;
+    top: 11px;
+    left: -6px;
+  }
+  /*sdf*/
+  p.margin {
+    margin:0px 20px;
+  }
+  div.img
+  {
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid #0000ff;
+    height: auto;
+    width: auto;
+    float: left;
+    text-align: center;
+  }   
+  div.img img
+  {
+    display: inline;
+    margin: 5px;
+    border: 1px solid #ffffff;
+  }
+  div.img a:hover img {border: 1px solid #0000ff;}
+  div.desc
+  {
+    text-align: center;
+    font-weight: normal;
+    width: 120px;
+    margin: 5px;
+  }
+  </style>
+</head>
 <!-- NAVBAR
   ================================================== -->
   <body>
@@ -91,10 +110,10 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ url_for('main') }}">Home</a></li>
+                <li><a href="{{ url_for('main') }}">Home</a></li>
                 <li><a href="{{ url_for('myBinder') }}">My Binder</a></li>
                 <li><a href="{{ url_for('forum') }}">Forum</a></li>
-                <li><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
+                <li class="active"><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ url_for('signUp') }}">Sign Up</a></li>
@@ -108,7 +127,7 @@
                       <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
                       <label class="string optional" for="user_remember_me"> Remember me</label>
 
-                      <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+                      <a class="btn btn-primary" role="button">Sign In</a>
                     </form>
                     <!-- Login form here -->
                   </div>
@@ -119,25 +138,28 @@
         </div>
       </div>
     </div>
+
     <div class="container">
 
-          <h3>Tutorial</h3>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3>Tutorials</h3>
+          <form action="">
 
-            <h3><a id="C1">Simple 3D design</a></h3>
-            <p>This chapter explains ba bla bla</p>
+            {% for test in pet%}
+            <div class="img">
+              <a target="_blank" href="{{ test.link }}"><img src="{{ test.image }}" alt="Klematis" width="110" height="90"></a>
+              <div class="desc">{{ test.description }}</div>
+            </div>
+            {% endfor %}
 
-            <h3><a id="C2">Helix</a></h3>
-            <p>This chapter explains ba bla bla</p>
-
-            <h3><a id="C3">Assembly</a></h3>
-            <p>This chapter explains ba bla bla</p>
-
-            <h3><a id="C4">Heart</a></h3>
-            <p>This chapter explains ba bla bla</p>
- 
+          </form>
+        </div>
+      </div>
 
     </div>
     <!-- /.container -->
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
