--- a/templates/tutorial2.html
+++ b/templates/tutorial2.html
@@ -10,57 +10,64 @@
 
   <title>Solid Learning</title>
 
-  <!-- Bootstrap -->
+   <!-- Bootstrap -->
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
-  <!-- Custom styles for this template -->
-  <link href="carousel.css" rel="stylesheet">
-  <style>
-  /**DROPDOWN HOVER**/
-  .sidebar-nav {
-    padding: 9px 0;
-  }
+  <!-- Just for debugging purposes. Don't actually copy this line! -->
+  <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-  .dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
-  }
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+      <![endif]-->
 
-  .dropdown-menu li:hover .sub-menu {
-    visibility: visible;
-  }
+      <style>
+      /**DROPDOWN HOVER**/
+      .sidebar-nav {
+        padding: 9px 0;
+      }
 
-  .dropdown:hover .dropdown-menu {
-    display: block;
-  }
+      .dropdown-menu .sub-menu {
+        left: 100%;
+        position: absolute;
+        top: 0;
+        visibility: hidden;
+        margin-top: -1px;
+      }
 
-  .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
-    margin-top: 0;
-  }
+      .dropdown-menu li:hover .sub-menu {
+        visibility: visible;
+      }
 
-  .navbar .sub-menu:before {
-    border-bottom: 7px solid transparent;
-    border-left: none;
-    border-right: 7px solid rgba(0, 0, 0, 0.2);
-    border-top: 7px solid transparent;
-    left: -7px;
-    top: 10px;
-  }
-  .navbar .sub-menu:after {
-    border-top: 6px solid transparent;
-    border-left: none;
-    border-right: 6px solid #fff;
-    border-bottom: 6px solid transparent;
-    left: 10px;
-    top: 11px;
-    left: -6px;
-  }
-  </style>
-</head>
+      .dropdown:hover .dropdown-menu {
+        display: block;
+      }
+
+      .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+        margin-top: 0;
+      }
+
+      .navbar .sub-menu:before {
+        border-bottom: 7px solid transparent;
+        border-left: none;
+        border-right: 7px solid rgba(0, 0, 0, 0.2);
+        border-top: 7px solid transparent;
+        left: -7px;
+        top: 10px;
+      }
+      .navbar .sub-menu:after {
+        border-top: 6px solid transparent;
+        border-left: none;
+        border-right: 6px solid #fff;
+        border-bottom: 6px solid transparent;
+        left: 10px;
+        top: 11px;
+        left: -6px;
+      }
+      </style>
+    </head>
 <!-- NAVBAR
   ================================================== -->
   <body>
@@ -87,10 +94,10 @@
                 <li><a href="{{ url_for('main') }}">Home</a></li>
                 <li><a href="{{ url_for('myBinder') }}">My Binder</a></li>
                 <li><a href="{{ url_for('forum') }}">Forum</a></li>
-                <li><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
+                <li class="active"><a href="{{ url_for('tutorial') }}">Tutorials</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="{{ url_for('signUp') }}">Sign Up</a></li>
+                <li><a href="{{ url_for('signUp') }}">Sign Up</a></li>
                 <li class="divider-vertical"></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" href="{{ url_for('main') }}" data-toggle="dropdown">Sign In<strong class="caret"></strong></a>
@@ -112,36 +119,25 @@
         </div>
       </div>
     </div>
-
     <div class="container">
 
-      <div class="row">
-        <div class="col-lg-12">
-          <h3>New User</h3>
-          <form action="">
-            <ul>
-              <li><p>First Name: <input type="text" name="FirstName"><br></p></li>
-              <li><p>Last Name: <input type="text" name="LastName"><br></p></li>
-              <li><p>E-mail: <input type="text" name="E-mail"><br></p></li>
-              <li><p>Username / ID: <input type="text" name="Username/ID"><br></p></li>
-              <li><p>Password: <input type="text" name="Password"><br></p></li>
-              <li><p>re-type password: <input type="text" name="re-type"><br></p></li>
-              <li><p>Birthday(mm/dd/yy): <input type="text" name="Bday"><br></p></li>
-              <li>Gender:
-                <select>
-                  <option value="----">----</option>
-                  <option value="Male">Male</option>
-                  <option value="Female">Female</option>
-                </select>
-              </li><br>
-            </ul>
-            <!-- Indicates a successful or positive action -->
-            <a href="{{ url_for('main') }}"><button type="button" class="btn btn-search">Submit</button></a>
-          </form>
-        </div>
-      </div>
+          <h3>Tutorial</h3>
+
+            <h3><a id="C1">Simple 3D design</a></h3>
+            <p>This chapter explains ba bla bla</p>
+
+            <h3><a id="C2">Helix</a></h3>
+            <p>This chapter explains ba bla bla</p>
+
+            <h3><a id="C3">Assembly</a></h3>
+            <p>This chapter explains ba bla bla</p>
+
+            <h3><a id="C4">Heart</a></h3>
+            <p>This chapter explains ba bla bla</p>
+ 
 
     </div>
+    <!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
